Fix z-index for app bar.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@ html, body {
 
 .buka__header {
     top: 0;
+    z-index: 2;
     width: 100%;
     height: 64px;
     position: fixed;
